6/16作業分